--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>カスタム表裏カード</title>
+    <title>English-textbook-Reading_V0</title>
     <style>
       body {
           background: #f3f4f6;
@@ -717,7 +717,7 @@
         app.innerHTML = `
           <div class="container">
             <button id="settingsBtn" title="設定">⚙️</button>
-            <h1 class="title">カスタム表裏カード_v0</h1>
+            <h1 class="title">English-textbook-Reading_V0</h1>
             <div id="lists"></div>
             <div class="mt-8 text-center">
               <button id="selectFromRepoBtn" class="add-btn" style="margin-bottom: 1rem;">リスト選択</button>
