--- a/index.html
+++ b/index.html
@@ -375,27 +375,42 @@
 
       .speech-controls {
           display: flex;
-          flex-direction: column;
+          flex-direction: row;
           align-items: center;
-          gap: 0.5rem;
-          margin: 0.5rem auto;
-          width: 80%;
-          max-width: 300px;
+          justify-content: center;
+          gap: 0.75rem;
+          margin: 1rem auto;
+          width: 100%;
+          max-width: 420px;
+          padding: 0 1rem;
+          box-sizing: border-box;
+      }
+
+      .speech-controls .sub-btn {
+          padding: 0.5rem 1rem;
+          font-size: 1rem;
+          flex-shrink: 0;
       }
 
       .speech-controls label {
           font-size: 0.9rem;
           color: #4b5563;
+          flex-shrink: 0;
+          margin: 0;
       }
 
       .speech-controls input[type="range"] {
           width: 100%;
+          max-width: 160px;
           cursor: pointer;
       }
-
-      .speak-btn-container {
-          display: flex;
-          justify-content: center;
+      
+      #speechRateValue {
+        font-size: 0.9rem;
+        color: #4b5563;
+        font-weight: 500;
+        min-width: 2.2em;
+        text-align: right;
       }
 
       .back-link {
@@ -1165,13 +1180,12 @@
               </div>
 
               <div class="speech-controls">
-                <label for="speechRateSlider">読み上げ速度: <span id="speechRateValue">${speechRate.toFixed(1)}</span></label>
+                <button id="speakBtn" class="sub-btn">🔊 発音</button>
+                <label for="speechRateSlider">速度</label>
                 <input type="range" id="speechRateSlider" min="0.3" max="2" step="0.1" value="${speechRate}">
+                <span id="speechRateValue">${speechRate.toFixed(1)}</span>
               </div>
-
-              <div class="speak-btn-container">
-                <button id="speakBtn" class="sub-btn">🔊 発音を聞く</button>
-              </div>
+              
               ${grammarHtml}
               <div class="counters">
                 <span>のこり: ${remainingCount}</span>
